# VizAble

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  functions.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: changelog.yaml  lint-commit-message.yaml  pypi-publish.yaml  pytest.yaml  python-semantic-release.yaml  run-pytest-with-tox.yaml  shinyappsio-deployment.yaml  tox.yaml
.shiny/: __init__.py  app.py  functions.py
VizAble/: __init__.py  app.py  chatbot.py  check_datatypes.py  functions.py  generate_plots.py  introductions.py  select_columns.py  select_plottypes.py  upload_file.py
VizAble/rsconnect-python/: VizAble.json
apps/: __init__.py  app.py  check_datatypes.py  functions.py  generate_plots.py  introductions.py  select_columns.py  select_plottypes.py  upload_file.py
docs/: apps.rst  conf.py  index.rst  modules.rst  tests.rst
docs/_build/doctrees/: VizAble.doctree  apps.doctree  environment.pickle  index.doctree  modules.doctree  tests.doctree
docs/_build/html/: .buildinfo  VizAble.html  apps.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
docs/_build/html/_sources/: VizAble.rst.txt
test_dataframe/: csv_comma_no_quote.csv  csv_semi_single_quote.csv  csv_tab_double_quote.csv  csv_tab_single_quote.csv  generate_test_dataframe.py  xls_example_file.xls  xlsx_example_file.xlsx
tests/: __init__.py  test_functions.py
tests/test_dataframe/: csv_comma_double_quote.csv  csv_comma_single_quote.csv  csv_semi_double_quote.csv  csv_semi_no_quote.csv  csv_tab_no_quote.csv  with_parser_error.csv  without_parser_error.csv
