[tool.poetry]
name = "accessible-data-viz-application"
version = "0.1.0"
description = ""
authors = ["Chi-Ying Chuang <83235098+Rebekah-Chuang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
shiny = "^0.7.1"
openpyxl = "^3.1.2"
great-tables = "^0.2.0"
shinyswatch = "^0.4.2"
ipykernel = "^6.29.1"
requests = "^2.31.0"
poetry = "^1.7.1"
pyarrow = "^15.0.0"
build = "^1.0.3"
cffi = "^1.16.0"
cleo = "^2.1.0"
crashtest = "^0.4.1"
distlib = "^0.3.8"
dulwich = "^0.21.7"
exceptiongroup = "^1.2.0"
jinja2 = "^3.1.3"
pickleshare = "^0.7.5"
setuptools = "^69.0.3"
wheel = "^0.42.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
