[tool.poetry]
name = "VizAble"
version = "0.10.0"
description = "A web-based data visualization tool that generates accessible visualizations for all users, including people with visual impairments (low vision or blind)."
license = "MIT"
authors = ["Chi-Ying Chuang <rebekah890110@gmail.com>"]
readme = "README.md"
packages = [{include = "VizAble"}]

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11"
numpy = "^1.26.4"
pandas = "^2.2.0"
shiny = "^0.8.0"
openpyxl = "^3.1.2"
great-tables = "^0.2.0"
shinyswatch = "^0.4.2"
ipykernel = "^6.29.1"
requests = "^2.31.0"
poetry = "^1.7.1"
pyarrow = "^15.0.0"
build = "^1.0.3"
cffi = "^1.16.0"
cleo = "^2.1.0"
crashtest = "^0.4.1"
distlib = "^0.3.8"
dulwich = "^0.21.7"
exceptiongroup = "^1.2.0"
jinja2 = "^3.1.3"
pickleshare = "^0.7.5"
setuptools = "^69.0.3"
wheel = "^0.42.0"
sphinx = "^7.2.6"
sphinx-press-theme = "^0.8.0"
rsconnect-python = "^1.22.0"
shinywidgets = "^0.3.1"
plotly = "^5.20.0"
google-generativeai = "^0.5.0"

[tool.poetry.scripts]
"VizAble.run_app" = "VizAble.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
python-semantic-release = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.semantic_release]
version_variables = [
    "VizAble/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
commit_author = "semantic-release <semantic-release>"
commit_message = "chore(release): v{version} [skip ci]\n\nAutomatically generated by python-semantic-release"
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "\\bCHANGELOG\\.md\\b",
    "^chore\\(release\\):",
    "^Merge",
]